--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
          <!-- Three columns of text below the carousel -->
          <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="static/p4.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="/static/p4.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Detection of Humans in Survillience Area</h2>
            <p>It detects presence of human in Survillience areas and provides alert if any human is detected. 
              <br>
