--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 <div class="container py-5" id="Contact">
        <h1>Contact Details </h1>
-       <img src="/static/contactus.jpg" alt="" width=1300px>
+       <img src="static/contactus.jpg" alt="" width=1300px>
       
        <div>
         
