--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
          <!-- Three columns of text below the carousel -->
          <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/static/p4.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="static/p4.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Detection of Humans in Survillience Area</h2>
            <p>It detects presence of human in Survillience areas and provides alert if any human is detected. 
              <br>
@@ -128,7 +128,7 @@
             <p><a class="btn btn-secondary" href="https://github.com/ishika161/DHSA" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/static/p1.jpg" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="static/p1.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Handwritten Digit Recognition on MNIST dataset</h2>
             <p> It performs a digit recognition task. As such there are 10
               digits (0 to 9) or 10 classes to predict. <br>
@@ -136,7 +136,7 @@
             <p><a class="btn btn-secondary" href="https://github.com/ishika161/digit_classification" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/static/p3.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="static/p3.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Spam Classifier</h2>
             <p>It performs text classification and identifies spam messages. The dataset contains statements
               along with corresponding labels . <br>
@@ -146,7 +146,7 @@
         </div><!-- /.row -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/static/p2.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="static/p2.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Traffic sign classification: </h2>
            <p>The task of the model is to classify the captured image as the corresponding traffic
             sign. Then the label is converted to audio to provide alert to the driver .            
@@ -156,14 +156,14 @@
             <p><a class="btn btn-secondary" href="https://github.com/ishika161/TrafficSignClassification" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/static/p5.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="static/p5.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Website</h2>
             <p> A website for a beauty Salon. <br>
               Technologies used: html , tailwind css</p>
             <p><a class="btn btn-secondary" href="https://github.com/ishika161/SUHAAGNICEMAKEOVERS.github.io" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/static/p6.jpg" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="static/p6.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>Car Price Prediction </h2>
             <p>We are required to model the price of cars with the available independent variables. It will be used by the management to understand how exactly the prices vary with the independent variables. <br>
               Technologies used: Python , Machine Learning.</p>
@@ -181,17 +181,17 @@
         
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/static/mail.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="static/mail.png" alt="Generic placeholder image" width="140" height="140">
             <br>
             <a href="gargishika161@gmail.com" class="link-dark">gargishika161@gmail.com</a>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/static/link.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="static/link.png" alt="Generic placeholder image" width="140" height="140">
             <br>
             <a href="https://www.linkedin.com/in/ishika-garg-2389931a3/" class="link-dark">Ishika Garg</a>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/static/git.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="static/git.png" alt="Generic placeholder image" width="140" height="140">
             <br>
             <a href="https://github.com/ishika161" class="link-dark">ishika161</a>
           </div><!-- /.col-lg-4 -->
